objects/MUSW__Application2__c.object
<CustomObject>
    <description>Planning Applications eg. Site Plan</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Affiliation which is used for the service request</description>
        <label>Affiliation</label>
        <referenceTo>Affiliation__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <displayFormat>App-{0000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttestationFullName__c</fullName>
        <label>Attestation Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attestation_Date__c</fullName>
        <description>Attestation Date</description>
        <label>Attestation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>This refers to the credential type being applied for</description>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_JSON__c</fullName>
        <label>Form JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LnP_Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LnP_Parcel</label>
        <referenceTo>LnP_Parcel__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account associated with the application. This is only referred to by Account Carts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact applicant associated with the application.</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planning Applications</relationshipLabel>
        <relationshipName>Application2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Bluebeam_Project_Id__c</fullName>
        <description>This is self-populated by the Bluebeam project Id that is associated with this application record. This is a required field.</description>
        <label>BG Bluebeam Project Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Completion_Date__c</fullName>
        <description>Date the application was fully completed/submitted.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Decision_Date__c</fullName>
        <description>In applications that require approval or hearings, this shows the date that decision was made.</description>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Description of what the application is for.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>The permanent application number.</description>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Parcel for which the application is being submitted.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is a part of a project, the lookup links to the associated project record.</description>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>The current status of the application. This picklist can be defined according to the client&apos;s business processes.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Generate Fee</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Total_Balance__c</fullName>
        <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Name</fullName>
                </value>
                <value>
                    <fullName>Withdraw Application</fullName>
                </value>
                <value>
                    <fullName>Submit Additional Documentation</fullName>
                </value>
                <value>
                    <fullName>Change in Status</fullName>
                </value>
                <value>
                    <fullName>Exam Re-Application</fullName>
                </value>
                <value>
                    <fullName>Relinquish Delegated Agent Status</fullName>
                </value>
                <value>
                    <fullName>Manage Affiliations</fullName>
                </value>
                <value>
                    <fullName>Public Health Emergency Plan Review</fullName>
                </value>
                <value>
                    <fullName>Priority Plan Review</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Title Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_First_Name__c</fullName>
        <label>New First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Last_Name__c</fullName>
        <label>New Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Maiden_Name__c</fullName>
        <label>New Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Middle_Name__c</fullName>
        <label>New Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Applications (Parent License)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the permit the service request is linked to</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of the service request, used for affiliation</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Purpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Submitting_Service_Request__c</fullName>
        <label>Reason for Submitting Service Request</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMC Controlling Person Registration</fullName>
                </value>
                <value>
                    <fullName>Add Associations</fullName>
                </value>
                <value>
                    <fullName>Disassociation</fullName>
                </value>
                <value>
                    <fullName>Add Affiliations</fullName>
                </value>
                <value>
                    <fullName>Remove Affiliations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Effective_Date__c</fullName>
        <label>Requested Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <label>Section Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Accommodation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Accommodation Request</description>
        <label>Special Accommodation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>This is the date for submission of the service request.</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Modification_Request__c</fullName>
        <label>Title Modification Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lien Removal</fullName>
                </value>
                <value>
                    <fullName>Error in &quot;Buyer&quot; and/or &quot;Seller&quot; portion on Title</fullName>
                </value>
                <value>
                    <fullName>Legal Name Change</fullName>
                </value>
                <value>
                    <fullName>Title Surrender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrading_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgrading License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Applications (Upgrading License)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>license_specific_email_addresses__c</fullName>
        <label>license specific email addresses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>license_specific_email_addresses</valueSetName>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>Abandoned_Applications</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Status__c</field>
            <operation>equals</operation>
            <value>Abandoned</value>
        </filters>
        <label>Abandoned Applications</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>Credential_Type__c</columns>
        <columns>Application_Method__c</columns>
        <columns>MUSW__Applicant__c</columns>
        <columns>MUSW__Total_Balance__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/16/2019 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>General_Service_Request</fullName>
        <active>true</active>
        <label>General Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manage_Affiliations</fullName>
        <active>true</active>
        <label>Manage Affiliations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Name_Change_Service_Request</fullName>
        <active>true</active>
        <label>Name Change Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <label>Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <label>Service Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_License_SR_by_Delegate__c</fullName>
        <label>Create License SR by Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_Service_Request_Share__c</fullName>
        <label>Insert Service Request Share</label>
    </sharingReasons>
</CustomObject>